--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Your Website Title</title>
-    <script src = "static/load.js"></script>
+    <script defer src = "static/load.js"></script>
 </head>
 <body>
     <div class="container">
-        <div class="left-column">
+        <div id="left-column">
             <div class = "pp-container">
                 <img class="profile-pic" src = "img/profile_pic.jpg"/>
             </div>
@@ -39,7 +39,7 @@
                 </div>
             </div>
         </div>
-        <div class="right-column">
+        <div id="right-column">
 
             <div id = "section-content">
 
