About me, long scrollable page with animations

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -1,1 +1,38 @@
-Sup about me
+<div id = 'about_me_container' class="container" >
+<section class = 'off-screen'>
+<h2>About Sec 1</h2>
+<p>
+    Is this
+    working?
+</p>
+</section>
+
+<section class = 'off-screen'>
+    <h2>About Sec 2</h2>
+    <p>
+        Is this
+        working?
+    </p>
+</section>
+<section class = 'off-screen'>
+    <h2>About Sec 3</h2>
+    <p>
+        Is this
+        working?
+    </p>
+</section>
+<section class = 'off-screen'>
+    <h2>About Sec 4</h2>
+    <p>
+        Is this
+        working?
+    </p>
+</section>
+<section class = 'off-screen'>
+    <h2>About Sec 5</h2>
+    <p>
+        Is this
+        working?
+    </p>
+</section>
+</div>
