Reorder hats vertically

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -36,6 +36,9 @@
         pipelines and AI models, wearing multiple hats across the data ecosystem.  
         Snowflake certified Advanced Data Engineer, <b>one of less than 50 worldwide</b>
         </div>
+
+    </div>
+    <div id = "hats" class = "summary timeline-content visible">
         <img src = "img/hat.svg" class = "tech-icon">
         <img src = "img/hat.svg" class = "tech-icon">
         <img src = "img/hat.svg" class = "tech-icon">
