--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -34,7 +34,7 @@
         <div>
         8+ yrs of experience as a manager and IC leading business strategy, managing data teams, building and deploying 
         pipelines and AI models, wearing multiple hats across the data ecosystem.  
-        Snowflake certified Advanced Data Engineer, <b>one of less than 50 worldwide</b>
+        <b style = "color:	#88b1b2">Snowflake certified Advanced Data Engineer</b>, <b>one of less than 50 worldwide</b>
         </div>
 
     </div>
@@ -46,6 +46,63 @@
         <img src = "img/hat.svg" class = "tech-icon">
         <img src = "img/hat.svg" class = "tech-icon">
         <img src = "img/hat.svg" class = "tech-icon">
+    </div>
+    <div id = "stack" class = "summary timeline-content visible">
+        <figure>
+            <img src = "img/logos/python.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/go-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/javascript-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/aws-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/kafka-icon-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/datadog-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/SNOW.svg" class = "tech-icon"/>
+        </figure>
+        <figure>
+            <img src = "img/logos/mongo.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/mysql-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/postgresql-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/docker-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/terraform-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/github-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/tableau-svgrepo-com.svg" class = "tech-icon">
+        </figure>        
+        <figure>
+        <img src = "img/logos/atlassian-jira-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/twilio-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+        <figure>
+            <img src = "img/logos/notion-svgrepo-com.svg" class = "tech-icon">
+        </figure>
+
+        <figure>
+            <img src = "img/logos/postman-svgrepo-com.svg" class = "tech-icon">
+        </figure>
     </div>
     <div id = "currently" class = 'currently timeline-content'>
         Currently, I work at <b>Nomi Health</b> as the <b>Senior Data Platform Lead</b> .
