Make introduction more professional

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -8,13 +8,13 @@
             Data leader
         </div>
         <div id = "about-music" class = "about-info-block" loadimg = "img/festival.JPG" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
-            Explorer of coffeeshops
+            Currently located in the gorgeous Austin,TX
         </div>
         <div id = "about-qball" class = "about-info-block" loadimg = "img/rags_quadball.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
             Avid Quadball coach, analyst, and enthusiast
         </div>
         <div id = "about-profeh" class = "about-info-block" loadimg = "img/festival.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
-            Love nature!
+            Catch me on the weekends at a coffeeshop or going for a hike!
         </div>
     </div>
 </section>
@@ -34,7 +34,9 @@
         <div>
         8+ yrs of experience as a manager and IC leading business strategy, managing data teams, building and deploying 
         pipelines and AI models, wearing multiple hats across the data ecosystem.  
-        <b style = "color:	#88b1b2">Snowflake certified Advanced Data Engineer</b>, <b>one of less than 50 worldwide</b>
+        <b style = "color:	#88b1b2" >Snowflake certified Advanced Data Engineer</b>, 
+        <b><a href = 'https://directory.snowflake.com/?groups=513831' style="text-decoration:none">
+        one of less than 50 worldwide</b> </a>
         </div>
 
     </div>
