Make element 1 selected

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -41,7 +41,7 @@
 
     </div>
     <div id = "hats" class = "summary timeline-content visible">
-        <object data = "img/hat.svg" fill = "#bf5700" type="image/svg+xml" class = "tech-icon"></object>
+        <object data = "img/hat.svg" fill = "#bf5700" type="image/svg+xml" class = "tech-icon selected"></object>
         <object data = "img/hat.svg" type="image/svg+xml" class = "tech-icon"></object>
         <object data = "img/hat.svg" type="image/svg+xml" class = "tech-icon"></object>
         <object data = "img/hat.svg" type="image/svg+xml" class = "tech-icon"></object>
