--- a/sections/data_blog.html
+++ b/sections/data_blog.html
@@ -1,4 +1,4 @@
-<div class="blog-background container vertical-flex">
+<!-- <div class="blog-background container vertical-flex">
 <div class ="blog-header">
     <text class = "quote"><i>"A hair, they say, separates the False from True."</i></text>
 </div>
@@ -25,4 +25,4 @@
 </div>
 
 </div>
-</div>
+</div> -->
