Prep for Spotify widget

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -16,7 +16,11 @@
         <div id = "about-profeh" class = "about-info-block" loadimg = "img/festival.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
             Catch me on the weekends at a coffeeshop or going for a hike!
         </div>
+
     </div>
+    <!-- <div id = "soundtrack" class = "spotify">
+        <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/6G6M4fl2I0eqEQnzyTwR8m?utm_source=generator" width="100%" height="90" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+    </div> -->
 </section>
 <section id = 'career' class = 'animated-page career'>
     <!-- <h2 class="career page-header">Career</h2>  -->
@@ -231,7 +235,8 @@
     
 </section>
 <section id = 'interests' class = 'animated-page interests'>
-    <!-- <h2 class="interest page-header"> Coffeeshop </h2> 
+    <h2 class="interest page-header"> Sidequests </h2> 
+     <!--
     <div id = 'interest-box'>
 
         <div id = 'reading' class = 'vertical-flex brad-list'>
