--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div id="right-column">
-
+            <div id="scroll-navigator" class = "scroll-navigator hidden"></div>
             <div id = "section-content">
 
             </div>
