Unnest career/resume page into distinct sections, remove redundant code

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -23,18 +23,7 @@
     </div> -->
 </section>
 <section id = 'career' class = 'animated-page career'>
-    <!-- <h2 class="career page-header">Career</h2>  -->
-    <!-- <img id = "career-profile-picture" class = "career main-picture" src = "img/rags_flowers.jpg"  defaultSrc = "img/rags_flowers.jpg">
-    <button class = "timeline-button">&lt</button>
-    <button class = "timeline-button">&gt</button> -->
-    <div class = "line"></div>
-
-    <button id = "summary-button" class="timeline-button selected" onclick = "displayCareerTimeline(this,'summary')"></button>
-    <button id = "previously-button" class="timeline-button" onclick = "displayCareerTimeline(this,'previously')"></button>
-    <!-- <button id = "currently-button" class="timeline-button" onclick = "displayCareerTimeline(this,'currently')"></button> -->
-    <button id = "other-button" class="timeline-button" onclick = "displayCareerTimeline(this,'other')"></button>
-    <button id = "education-button" class="timeline-button" onclick = "displayCareerTimeline(this,'education')"></button>
-    <div id = "summary" class = "summary timeline-content visible">
+    <div id = "summary" class = "summary timeline-content ">
         <div>
         8+ yrs of experience as a manager and IC leading business strategy, managing data teams, building and deploying 
         pipelines and AI models, wearing multiple hats across the data ecosystem.  
@@ -45,7 +34,7 @@
 
     </div>
 
-    <div id = "stack" class = "summary timeline-content visible">
+    <div id = "stack" class = "summary timeline-content ">
         <figure>
             <img src = "img/logos/python.svg" class = "tech-icon">
         </figure>
@@ -102,6 +91,8 @@
             <img src = "img/logos/postman-svgrepo-com.svg" class = "tech-icon">
         </figure>
     </div>
+</section>
+<section id = 'resume' class = 'animated-page career '>
 
     <div id = "hats" class = "previously timeline-content " >
         <img src = "img/hat_colored.svg"   class = "tech-icon selected" data-target = "resume-summary" onclick="hat(this)"/>
@@ -209,6 +200,8 @@
             </ul>
         </div>
     </div>
+</section>
+<section id = 'other-roles' class = 'animated-page career'>
     <div id = "lead-instructor" class = "other timeline-content">
         <h3>Lead Instructor</h3>
         <a href = 'https://techbootcamps.utexas.edu/data/'>UT Data and Analytics Bootcamp </a>
@@ -217,24 +210,19 @@
         <h3>Director, Gameplay</h3>
         <a href = 'https://www.mlquadball.com/'>Major League Quadball</a>
     </div>
+</section>
+<section id = 'education-section' class = 'animated-page career'>
     <div id = "education" class = 'education timeline-content'>
         <b>University of Texas at Austin 2016</b><br/>
         B.S in Mathematics, Statistics and Data Science Track <br/>
         Certificate Program in Applied Statistical Modeling <br/>
         27 hours of graduate coursework in ML + Statistics
     </div>
-    
     <img id = "education-profile-picture" class = "education main-picture timeline-content" src = "img/rags_ut.png"  defaultSrc = "img/rags_ut.png">
-    <!-- <div id = "technologies">
-        <img class = "tech-icon" src = "img/logos/python.svg"/>
-        <img class = "tech-icon" src = "img/logos/SNOW.svg"/>
-        <img class = "tech-icon" src = "img/logos/go.svg"/>
-        <img class = "tech-icon" src = "img/logos/aws.svg"/>
-        <img class = "tech-icon" src = "img/logos/mongo.svg"/>
-        <img class = "tech-icon" src = "img/logos/mysql.svg"/>
-    </div> -->
     
 </section>
+
+
 <section id = 'interests' class = 'animated-page interests'>
     <h2 class="interest page-header"> Sidequests </h2> 
      <!--
