--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -23,6 +23,7 @@
     </div> -->
 </section>
 <section id = 'career' class = 'animated-page career'>
+    <h1>Career Summary</h1>
     <div id = "summary" class = "summary timeline-content ">
         <div>
         8+ yrs of experience as a manager and IC leading business strategy, managing data teams, building and deploying 
@@ -94,6 +95,7 @@
 </section>
 <section id = 'resume' class = 'animated-page career '>
 
+
     <div id = "hats" class = "previously timeline-content " >
         <img src = "img/hat_colored.svg"   class = "tech-icon selected" data-target = "resume-summary" onclick="hat(this)"/>
         <img src = "img/hat_black.svg"   class = "tech-icon" data-target="data-manager" onclick="hat(this)"/>
@@ -123,7 +125,7 @@
 
         <div>
             Working at primarily small companies and startups makes you wear a ton of hats!
-            Click the hats to the left to learn more about the various hats I have worn!
+            Click the hats below to learn more about the various hats I have worn!
         </div>
     </div>
     <div id = "data-manager" class = "previously timeline-content resume-section">
@@ -202,6 +204,7 @@
     </div>
 </section>
 <section id = 'other-roles' class = 'animated-page career'>
+    <h1>Other Roles</h1>
     <div id = "lead-instructor" class = "other timeline-content">
         <h3>Lead Instructor</h3>
         <a href = 'https://techbootcamps.utexas.edu/data/'>UT Data and Analytics Bootcamp </a>
@@ -212,6 +215,7 @@
     </div>
 </section>
 <section id = 'education-section' class = 'animated-page career'>
+    <h1> Education </h1>
     <div id = "education" class = 'education timeline-content'>
         <b>University of Texas at Austin 2016</b><br/>
         B.S in Mathematics, Statistics and Data Science Track <br/>
