Remove deleted/commented javascript code

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -4,16 +4,16 @@
     <h2 class="introduction page-header">Introduction</h2>
     <img id = "introduction-profile-picture" class = "introduction main-picture" src = "img/rags_flowers.jpg"  defaultSrc = "img/rags_flowers.jpg">
     <div id = 'about-block' class= "introduction info" >
-        <div id = "about-profesh" class = "about-info-block" loadimg = "img/profile_pic.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
+        <div id = "about-profesh" class = "about-info-block" loadimg = "img/profile_pic.jpg" onmouseenter="loadImg(this)" >
             Data leader
         </div>
-        <div id = "about-music" class = "about-info-block" loadimg = "img/festival.JPG" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
+        <div id = "about-music" class = "about-info-block" loadimg = "img/festival.JPG" onmouseenter="loadImg(this)" >
             Currently located in the gorgeous Austin,TX
         </div>
-        <div id = "about-qball" class = "about-info-block" loadimg = "img/rags_quadball.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
+        <div id = "about-qball" class = "about-info-block" loadimg = "img/rags_quadball.jpg" onmouseenter="loadImg(this)" >
             Avid Quadball coach, analyst, and enthusiast
         </div>
-        <div id = "about-profeh" class = "about-info-block" loadimg = "img/festival.jpg" onmouseenter="loadImg(this)" onmouseleave="resetImg()">
+        <div id = "about-profeh" class = "about-info-block" loadimg = "img/festival.jpg" onmouseenter="loadImg(this)" >
             Catch me on the weekends at a coffeeshop or going for a hike!
         </div>
 
