Clean up formatting

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script defer src = "static/load.js"></script>
 </head>
 <body>
-    <div class="container">
+    <div id ="main-container" class="container">
         <div id="left-column">
             <div class = "pp-container">
                 <img class="profile-pic" src = "img/profile_pic.jpg"/>
