Duplicate formatting, .vertical-flex not needed, already covered by #contact-container

--- a/sections/contact_me.html
+++ b/sections/contact_me.html
@@ -1,4 +1,4 @@
-<div id ="contact-container" class = "vertical-flex container">
+<div id ="contact-container" class = "container">
 <div class="contact calendly">
     <div class = "info"> 
         <div class = "info-header">
