Tech debt cleanup - rearchitect styling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style/about_me.css">
+    <link rel="stylesheet" href="style/subsection-layouts/introduction.css">
+    <link rel="stylesheet" href="style/subsection-layouts/career.css">
+    <link rel="stylesheet" href="style/subsection-layouts/resume.css">
+    <link rel="stylesheet" href="style/subsection-layouts/other-roles.css">
+    <link rel="stylesheet" href="style/subsection-layouts/education.css">
+    <link rel="stylesheet" href="style/projects.css">
+    <link rel="stylesheet" href="style/contact_me.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Your Website Title</title>
     <script defer src = "static/load.js"></script>
