--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -1,7 +1,7 @@
 <div id = 'about_me_container' class="container" >
 
 <section id = 'introduction' class = 'off-screen animated-page introduction'>
-    <h2 class="introduction page-header">Introduction</h2>
+    <h1 class="introduction page-header">Introduction</h1>
     <img id = "introduction-profile-picture" class = "introduction main-picture" src = "img/rags_flowers.jpg"  defaultSrc = "img/rags_flowers.jpg">
     <div id = 'about-block' class= "introduction info" >
         <div id = "about-profesh" class = "about-info-block" loadimg = "img/profile_pic.jpg" onmouseenter="loadImg(this)" >
@@ -202,11 +202,18 @@
 </section>
 <section id = 'other-roles' class = 'animated-page career'>
     <h1>Other Roles</h1>
-    <div id = "lead-instructor" class = "other timeline-content">
+    <div id = "lead-instructor" class = "other-header timeline-content">
         <h3>Lead Instructor</h3>
         <a href = 'https://techbootcamps.utexas.edu/data/'>UT Data and Analytics Bootcamp </a>
     </div>
-    <div id = "gameplay-director" class = "other timeline-content">
+    <div id = "lead-instructor-body" class = "timeline-content">
+        As lead instructor of the UT Austin Data bootcamp, I was in charge of instructing and mentoring cohorts of 50+ students with little exposure to code 
+        to technical expertise in the fields of data engineering, data science, and analytics using languages and tools like Python, AWS, SQL, Databricks, Javascript, and Tableau
+    </div>    
+    <div id = "gameplay-director-body" class = "timeline-content">
+        As gameplay director for MLQ, my role was to establish policies and procedures to optimize gameplay. 
+    </div>
+    <div id = "gameplay-director" class = "other-header timeline-content">
         <h3>Director, Gameplay</h3>
         <a href = 'https://www.mlquadball.com/'>Major League Quadball</a>
     </div>
@@ -223,21 +230,8 @@
     
 </section>
 
-
 <section id = 'interests' class = 'animated-page interests'>
     <h2 class="interest page-header"> Sidequests </h2> 
-</section>
-
-<section  id = 'quadball' class = 'animated-page quadball'>
-    <h2 class = 'quadball career-header'>Quadball</h2>
-
-</section>
-<section id = 'other-work' class = 'animated-page other-work'>
-    <h2>About Sec 3</h2>
-    <p>
-        Is this
-        working?
-    </p>
 </section>
 
 </div>
