Enable navigator selector style ON SCROLL and thus automatically on select

--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -1,4 +1,4 @@
-<div id = 'about_me_container' class="container" >
+<div id = 'about_me_container' class="container navsec-container" >
 
 <section id = 'introduction' class = 'off-screen animated-page introduction'>
     <h1 class="introduction page-header">Introduction</h1>
