Fix overflow and scrolling issue

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="style/subsection-layouts/resume.css">
     <link rel="stylesheet" href="style/subsection-layouts/other-roles.css">
     <link rel="stylesheet" href="style/subsection-layouts/education.css">
+    <link rel="stylesheet" href="style/subsection-layouts/interests.css">
     <link rel="stylesheet" href="style/projects.css">
     <link rel="stylesheet" href="style/contact_me.css">  
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
