--- a/sections/about_me.html
+++ b/sections/about_me.html
@@ -231,7 +231,7 @@
 </section>
 
 <section id = 'interests' class = 'animated-page interests'>
-    <h2 class="interest page-header"> Sidequests </h2> 
+    <h1 class="interests page-header"> Sidequests </h2> 
 </section>
 
 </div>
